Closed
Bug 222336
Opened 22 years ago
Closed 22 years ago
Incredibly huge horizontal scrollbar although no scroll is needed at all.
Categories
(Core :: Layout: Tables, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: wittlock+bugzilla-mozilla, Assigned: bernd_mozilla)
References
Details
(Keywords: regression, testcase)
Attachments
(4 files, 1 obsolete file)
|
234.80 KB,
image/jpeg
|
Details | |
|
373 bytes,
text/html
|
Details | |
|
425 bytes,
text/html
|
Details | |
|
876 bytes,
patch
|
dbaron
:
review+
dbaron
:
superreview+
brendan
:
approval1.6+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6a) Gecko/20031014 Firebird/0.7+ (aebrahim)
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6a) Gecko/20031014 Firebird/0.7+ (aebrahim)
The attached URL shows a website where a horzontal scrollbar shows up and
allowed you to scroll _a lot_ although all the contect snuggly fits in the
frame. This bug has been introduced since Phoenix 0.5 (which I upgraded from
just today) and it still looks good in Phoenix 0.5, as well as in IE6.
Reproducible: Always
Steps to Reproduce:
1. Just visit www.lunarstorm.se for an example.
2. Watch the horzontal scrollbar in the biggest of the frames.
3.
Expected Results:
Obviously there shouldn't be a horizontal scrollbar. :)
Comment 1•22 years ago
|
||
Works for me 20031012 PC/WinXP. No horizontal scrollbar generated.
Comment 2•22 years ago
|
||
WFM too, exact same build as yours (athlon SSE)
did you completely delete installation directory before installation, instead of
overwriting files? Can you reproduce this with a clean new profile?
| Reporter | ||
Comment 3•22 years ago
|
||
I just tested creating a new profile, deactivating the extensions (which are
installed for all users) and the problem remained. I sort of did a clean
install. The program went into it's own directory (called Firebird, since I
upgraded from Phoenix, which had a dir named phoenix), but all my bookmarks
remained (were located in the "documents and settings\username\application
data\andsoon" directory I guess).
I am running the Pentium 4-optimized version that I found <a
href="http://forums.mozillazine.org/viewtopic.php?t=29286">here</a>, which I
forgot to mention. But could it be my profile since the problem didn't exist in 0.5?
Comment 4•22 years ago
|
||
Works for me using Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5)
Gecko/20031007 Firebird/0.7
Please try installing into a new directory and creating a new profile, using the
MozillaFirebird.exe -p switch, and report your results here
an older Firebird profile could certainly cause problems like this.
resolving WFM,
install a clean Firebird (no extensions or plugins) and then create a new
profile directly from that .exe (not from Phoenix) and see how that goes. Also,
does a reload fix this?
Status: UNCONFIRMED → RESOLVED
Closed: 22 years ago
Resolution: --- → WORKSFORME
| Reporter | ||
Comment 5•22 years ago
|
||
Alright. I used one of those .zip files that you just extract and got a fresh
Firebird to use (not the installer). This is also a P4-optimized version I got
from the link I provided in comment #3. I created a new profile (again) with -p
from this copy of Firebird. And still the same problem. Several refreshes
doesn't change it. I took a screenshot to show the version as well as my empty
extension window which I will attach right after I post this.
Could the P4-optimization have caused this? Since I seem to be pretty much alone
to suffer from this... Although, so far I seem to have a version that is 2 days+
newer then everyone elses (who has posted here), could the bug be so fresh?
So, it's still there for me, but I won't reopen the bug (dunno if I'm supposed
to or not... I'm a bit new to this whole system ;)
| Reporter | ||
Comment 6•22 years ago
|
||
Read comment #5 for more details on what this is.
| Reporter | ||
Updated•22 years ago
|
Attachment #133378 -
Attachment description: This is screenshot of a fresh install, new profile, showing version and lack of extensions. → This is screenshot of the problem, on a fresh install, new profile and no extensions.
Comment 7•22 years ago
|
||
please note, I have same build as you [Mozilla/5.0 (Windows; U; Windows NT 5.1;
en-US; rv:1.6a) Gecko/20031014 Firebird/0.7+ (aebrahim)], except that mine is
optimised for Athlon/SSE..., it could be possible that SSE2 optimizations cause
the problem.
Comment 8•22 years ago
|
||
I now see the problem too, it only appers when the browser window is resized
(after load) so that there's no space to the right of the *vertical* scrollbar
Status: RESOLVED → UNCONFIRMED
Resolution: WORKSFORME → ---
| Reporter | ||
Comment 9•22 years ago
|
||
I don't need to do any resizing of my browser window for it to appear. It shows
up every time. It's there if the window is too small for the frame (still way
too big scrollbar), it's there if I reload while changing size, it's there if I
run maximized in 1280*1024, it's there in the full screen mode as well.
I downloaded the Firebird linked to from the official site (20031007 I believe
it was) and can confirm that it does not appear in that version. I can't find
where to download the 20031014 without the SSE2 optimization though, so I cannot
test that, but comment #7 and comment #8 seems to suggest that it is somewhat
present also when compiled with SSE optimization.
Too tired to think of how the summary maybe should be rephrased (or should it?)
so someone else might want to do that for me (in case we feel like this is a
SSE(2)-related bug)? Thank you. ;)
Comment 10•22 years ago
|
||
I don't think this bug is caused by use of SSE2, anyway I tortured by eyes and
tried running 1280x1024 @60 Hz (my usual is 1024x768) a still didn't see the
problem when maximized or full screen, for me it only appears when the window is
resized to "no space to the right of the *vertical* scrollbar".
Comment 11•22 years ago
|
||
also forgot to add that in your screenshot the browser is *not* maximized, and
this bug might simply be caused by bad html, not necessarily a browser problem
| Reporter | ||
Comment 12•22 years ago
|
||
True. The problem appears even when *not* maximized. Sorry if I weren't clear
about this before. It appears in unmaximized mode, wheter or not there's room
enough to make a frame to the right of the vertical scrollbar or not and also if
the "main frame" don't get enough room (scrollbar should be needed, but it's
still huge). My point was that it remained even in fullscreen/maximized mode.
I doubt that it has to do with bad html since it doesn't appear in most other
versions of the browser, but maybe I just don't know enough about how the
browsers interpret the code. As I said, the version I downloaded from Firebird's
website does NOT have this problem, nor did Phoenix 0.5, but rather only this
20031014 (SSE2 optimized) version, of the ones I've tried out, that is.
Comment 13•22 years ago
|
||
here's a better URL ith no frames: http://www.lunarstorm.se/log/log_outside.asp?
Comment 14•22 years ago
|
||
I noticed that Mozilla 1.5 does not have this problem, so I stripped down the
HTML almost to the bones, and while I know practically nothing about HTML, the
testcase still behaves differently 1.6a as opposed to 1.5:
long vertical scrollbar in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US;
rv:1.6a) Gecko/20031014 Firebird/0.7+ (aebrahim)
no vertical scrollbar in official Mozilla 1.5
I think it might be invalid html on their end, but still something has changed
between 1.5 and 1.6a
| Reporter | ||
Comment 15•22 years ago
|
||
Bug still present for me in that minimal testcase. Glad to finally see that I'm
not alone to see this. ;)
Comment 16•22 years ago
|
||
I can reproduce this with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US;
rv:1.6a) Gecko/20031020.
-> Browser.
It works with Mozilla 1.5.
-> adding regression and testcase keywords.
Assignee: blake → table
Component: General → Layout: Tables
Keywords: regression,
testcase
Product: Firebird → Browser
Version: unspecified → Trunk
Comment 17•22 years ago
|
||
This would be valid HTML 4.01 strict, if I included the dtd. But I didn't, so
it renders in quirks mode. The bug shows up here.
Updated•22 years ago
|
Attachment #133476 -
Attachment is obsolete: true
Comment 18•22 years ago
|
||
This is the same testcase, but including a dtd. It validates as HTML 4.01
Strict and is rendered in standards compliance mode. The bug does not show up
here.
Whiteboard: DUPEME
| Reporter | ||
Comment 19•22 years ago
|
||
Just thought I should add that the link I posted no longer is relevant (the
website is redesigned) so I'll remove it. The testcases prove the point quite
well. The redesigned website has the DTD thingy and no huge scrollbar.
Use testcases instead... :)
(bug still there, just not on that site)
| Assignee | ||
Comment 20•22 years ago
|
||
the overflow area is NS_UNCONSTRAINEDSIZE.
cell 03098D28 r=2 a=UC,UC c=UC,UC cnt=1182
block 03098DC0 r=2 a=UC,UC c=UC,UC cnt=1183
text 03098F14 r=2 a=UC,UC c=UC,UC cnt=1184
text 03098F14 d=0,0 me=0
tblO 030A1038 r=2 a=UC,UC c=0,0 cnt=1185
tblO 030A1038 d=0,12 me=0 o=(0,0) UC x 12
text 030A17DC r=2 a=UC,UC c=UC,UC cnt=1186
text 030A17DC d=0,0 me=0
block 03098DC0 d=0,12 me=0 o=(0,0) UC x 12
cell 03098D28 d=0,12
Assignee: table → bernd_mozilla
Status: UNCONFIRMED → NEW
Ever confirmed: true
Whiteboard: DUPEME
| Assignee | ||
Comment 21•22 years ago
|
||
the overflow area on a unconstrained intial reflow for a auto table is
meaningless.
Attachment #137357 -
Flags: superreview?(dbaron)
Attachment #137357 -
Flags: review?(dbaron)
Comment 22•22 years ago
|
||
I'm asking blocking1.6 because it fixes regression bug 227816 and the patch
looks simple (safe ?).
Flags: blocking1.6?
Comment 23•22 years ago
|
||
Comment on attachment 137357 [details] [diff] [review]
patch
Pre-approving -- if dbaron likes the patch, it should go into 1.6. If not, he
can remove approval1.6+.
/be
Attachment #137357 -
Flags: approval1.6+
Attachment #137357 -
Flags: superreview?(dbaron)
Attachment #137357 -
Flags: superreview+
Attachment #137357 -
Flags: review?(dbaron)
Attachment #137357 -
Flags: review+
Comment 24•22 years ago
|
||
Has this landed yet? If not, it needs to land quickly if it's going to make the
1.6 branch.
I checked this in to the trunk, 2003-12-16 17:33 -0800.
Status: NEW → RESOLVED
Closed: 22 years ago → 22 years ago
Resolution: --- → FIXED
Comment 26•22 years ago
|
||
*** Bug 226705 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 27•22 years ago
|
||
*** Bug 228267 has been marked as a duplicate of this bug. ***
Comment 29•22 years ago
|
||
Bernd rocks once more! Thanks, man.
You need to log in
before you can comment on or make changes to this bug.
Description
•