Don't mess with overflow area during first pass reflow.  b=222336  Patch from Bernd Mielke <bernd_mozilla@gmx.de>.  r+sr=dbaron  a=brendan